fix(phase-0): address CodeRabbit review feedback
- Fix Python version inconsistency: Update Ruff and mypy configs to py3.11
- Fix test isolation: Add pytest fixture to clear singleton cache
- Document API_HOST security: Add comments about 0.0.0.0 binding

CodeRabbit identified 3 issues:
1. (Minor) Document security implications of binding to all interfaces
2. (Critical) Python tooling configs still referenced 3.10 instead of 3.11
3. (Major) Singleton cache persists across tests causing isolation issues

All tests pass (9/9) with proper cache clearing.

--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,8 @@ REDIS_PASSWORD=your_redis_password
 CACHE_TTL=3600
 
 # FastAPI Configuration
+# Binds to all interfaces (0.0.0.0) for container compatibility
+# Ensure proper firewall rules are in place for production deployments
 API_HOST=0.0.0.0
 API_PORT=8000
 API_RELOAD=true
