chore(phase-0): install critical frontend dependencies
- Added zod for input validation
- Added react-error-boundary for error handling
- Added uuid, isomorphic-dompurify, lodash.debounce
- Added TypeScript types for uuid and lodash.debounce

Addresses code review issues C2.2, H1.1

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,18 +22,25 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "isomorphic-dompurify": "^2.30.1",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.344.0",
     "next": "^14.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^6.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
+    "zod": "^3.25.76",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.11.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "autoprefixer": "^10.4.0",
