feat(phase-1): implement context-engineering-expert agent with Opik integration
Add specialized sub-agent for prompt optimization using GPT-5 best practices
and Opik's 6 optimization algorithms.

**Core Components:**

1. **Opik Client Wrapper** (`backend/deep_agent/integrations/opik_client.py`)
   - Support for ALL 6 algorithms with performance benchmarks
   - HierarchicalReflectiveOptimizer (Rank #1, 67.83% avg)
   - FewShotBayesianOptimizer (Rank #2, 59.17% avg)
   - EvolutionaryOptimizer (Rank #3, 52.51% avg)
   - MetaPromptOptimizer (Rank #4, 38.75% avg) - MCP tool support
   - GepaOptimizer (Rank #5, 32.27% avg)
   - ParameterOptimizer (LLM parameter tuning)
   - Async/await support via run_in_executor
   - Embedded algorithm selection guide
   - NOTE: Using placeholder implementations until opik_optimizer released

2. **Prompt Optimization Tools** (`backend/deep_agent/tools/prompt_optimization.py`)
   - analyze_prompt: GPT-5 best practices analyzer
   - optimize_prompt: Multi-algorithm optimizer (all 6 algorithms)
   - evaluate_prompt: Performance metrics (accuracy, latency, tokens)
   - create_evaluation_dataset: Test case generator
   - ab_test_prompts: Statistical A/B testing with scipy t-tests
   - GPT5_BEST_PRACTICES constant with comprehensive checklist

3. **Context Engineering Expert Agent** (`backend/deep_agent/agents/sub_agents/`)
   - Specialized agent for prompt optimization
   - HIGH reasoning effort (temperature=0.3)
   - 5 prompt optimization tools
   - System prompt with algorithm selection guide
   - No state persistence (stateless sub-agent)
   - Singleton pattern for reuse

4. **System Prompt** (`backend/deep_agent/agents/sub_agents/prompts/context_engineering_prompt.py`)
   - Detailed tool usage instructions
   - Algorithm selection criteria
   - Workflow guidance (analyze → optimize → validate)
   - GPT-5 best practices checklist
   - Example workflows for common scenarios

**Testing:**

- Unit tests: test_prompt_optimization.py (26 tests)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,10 @@ perplexity-mcp = "^0.1.0"
 # Monitoring & Observability
 opik = "^0.2.0"
 
+# Prompt Optimization & Statistical Analysis
+scipy = "^1.11.0"
+numpy = "^1.24.0"
+
 # Security
 bcrypt = "^4.2.0"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
